--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="enter_email">Enter Email</string>
     <string name="name">Name</string>
     <string name="email">Email</string>
+    <string name="sign_up">Sign Up</string>
 </resources>
